--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         tools:targetApi="31">
 
 
-        <!-- Welcome Activity - Launch Activity -->
+        <!-- Welcome Activity - Launch Activity with Integrated Splash Screen -->
         <activity
             android:name=".ui.activities.WelcomeActivity"
             android:exported="true"
@@ -38,10 +38,13 @@
             android:name=".MainActivity"
             android:exported="false"
             android:theme="@style/Theme.Recipe" />
+
+        <!-- Recipe Detail Activity -->
         <activity
             android:name=".ui.activities.RecipeDetailActivity"
             android:exported="false" />
 
+        <!-- Favorite Activity -->
         <activity
             android:name=".ui.activities.FavoriteActivity"
             android:exported="false"
