--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
+    <!-- Internet permissions -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -12,9 +15,8 @@
         android:roundIcon="@drawable/recipe"
         android:supportsRtl="true"
         android:theme="@style/Theme.Recipe"
-
+        android:name=".RecipeApplication"
         tools:targetApi="31">
-
 
         <!-- Welcome Activity - Launch Activity with Integrated Splash Screen -->
         <activity
@@ -48,6 +50,14 @@
         <activity
             android:name=".ui.activities.FavoriteActivity"
             android:exported="false"
+            android:theme="@style/Theme.Recipe" />
+
+        <!-- WebView Activity for Privacy Policy and Terms -->
+        <activity
+            android:name=".ui.activities.WebViewActivity"
+            android:exported="false"
+            android:label="Legal"
+            android:parentActivityName=".MainActivity"
             android:theme="@style/Theme.Recipe" />
 
     </application>
