--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,17 @@
         android:name=".RecipeApplication"
         tools:targetApi="31">
 
+        <!-- AdMob App ID -->
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-2431558807153061~1926093247"/>
+
+        <!-- FIX: Resolve AdMob/Firebase conflict -->
+        <property
+            android:name="android.adservices.AD_SERVICES_CONFIG"
+            android:resource="@xml/gma_ad_services_config"
+            tools:replace="android:resource"/>
+
         <!-- Welcome Activity - Launch Activity with Integrated Splash Screen -->
         <activity
             android:name=".ui.activities.WelcomeActivity"
